Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -433,22 +433,43 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Aqui se realiza la suma de los ingresos de cada tienda y se imprimen los resultados"
+      ],
       "metadata": {
-        "id": "xykobSftV64I"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "LpevXQhCKbtv"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ingreso_tienda1=tienda['Precio'].sum()\n",
+        "ingreso_tienda2=tienda2['Precio'].sum()\n",
+        "ingreso_tienda3=tienda3['Precio'].sum()\n",
+        "ingreso_tienda4=tienda4['Precio'].sum()\n",
+        "print(f'Este es el ingreso de la primer tienda: {ingreso_tienda1}\\nEste es el ingreso de la segunda tienda: {ingreso_tienda2}\\nEste es el ingreso de la tercer tienda: {ingreso_tienda3}\\nEste es el ingreso de la cuarta tienda: {ingreso_tienda4}')"
+      ],
       "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "xykobSftV64I",
+        "outputId": "9e9b17ff-41c3-4a71-a8de-1068614bb82b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Este es el ingreso de la primer tienda: 1150880400.0\n",
+            "Este es el ingreso de la segunda tienda: 1116343500.0\n",
+            "Este es el ingreso de la tercer tienda: 1098019600.0\n",
+            "Este es el ingreso de la cuarta tienda: 1038375700.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -461,12 +482,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "venta_por_categoria_tienda1=tienda.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "print(venta_por_categoria_tienda1)"
+      ],
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "outputId": "1bf56f53-b4b5-4806-f665-108baf04aee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "Name: Precio, dtype: float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
