Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "4abbae59-f23d-4343-c17c-76faae678de0"
+        "outputId": "02da3148-afcb-4ec7-f024-7293ef1896a3"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ab683615-a7c8-4a39-9b9e-df45dff4a427\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a5232e6b-bc8e-4c6f-ae65-03446d57d335\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ab683615-a7c8-4a39-9b9e-df45dff4a427')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5232e6b-bc8e-4c6f-ae65-03446d57d335')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ab683615-a7c8-4a39-9b9e-df45dff4a427 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a5232e6b-bc8e-4c6f-ae65-03446d57d335 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ab683615-a7c8-4a39-9b9e-df45dff4a427');\n",
+              "        const element = document.querySelector('#df-a5232e6b-bc8e-4c6f-ae65-03446d57d335');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d26f11b8-ef2e-47f9-bb98-f2aeae0cdbd8\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d26f11b8-ef2e-47f9-bb98-f2aeae0cdbd8')\"\n",
+              "    <div id=\"df-c2eb9aac-b53e-42c6-955b-bccb009a6381\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c2eb9aac-b53e-42c6-955b-bccb009a6381')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d26f11b8-ef2e-47f9-bb98-f2aeae0cdbd8 button');\n",
+              "            document.querySelector('#df-c2eb9aac-b53e-42c6-955b-bccb009a6381 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -450,7 +450,7 @@
       "metadata": {
         "id": "c6wgDXL42n4E"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -475,13 +475,13 @@
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "a9428cf6-01be-4144-84d7-8c7c71b6b6c0",
+        "outputId": "b8a4be7a-7c0c-4466-94cc-875c5c0df249",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -495,7 +495,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-23a5e2f3-9449-4692-bdea-dff01a7420e7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6878dcd9-18eb-4ae8-8113-57897fe4fc53\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -545,7 +545,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23a5e2f3-9449-4692-bdea-dff01a7420e7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6878dcd9-18eb-4ae8-8113-57897fe4fc53')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -597,12 +597,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-23a5e2f3-9449-4692-bdea-dff01a7420e7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6878dcd9-18eb-4ae8-8113-57897fe4fc53 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-23a5e2f3-9449-4692-bdea-dff01a7420e7');\n",
+              "        const element = document.querySelector('#df-6878dcd9-18eb-4ae8-8113-57897fe4fc53');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -622,8 +622,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-4d24ce9d-71d2-4d51-ad13-c28194c0c14c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4d24ce9d-71d2-4d51-ad13-c28194c0c14c')\"\n",
+              "    <div id=\"df-5e8ba9db-2887-4c38-bd44-9e0ef95d86d6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e8ba9db-2887-4c38-bd44-9e0ef95d86d6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -742,14 +742,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4d24ce9d-71d2-4d51-ad13-c28194c0c14c button');\n",
+              "            document.querySelector('#df-5e8ba9db-2887-4c38-bd44-9e0ef95d86d6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_16acd4af-b981-4b3b-b6c9-c30c32f22f2a\">\n",
+              "  <div id=\"id_9859dfc5-0974-4adc-b626-d42dd0039781\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -793,7 +793,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_16acd4af-b981-4b3b-b6c9-c30c32f22f2a button.colab-df-generate');\n",
+              "        document.querySelector('#id_9859dfc5-0974-4adc-b626-d42dd0039781 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -839,13 +839,13 @@
       ],
       "metadata": {
         "id": "GIvquLtmf4OL",
-        "outputId": "fed924ea-2482-42ef-c376-e673cb268dc4",
+        "outputId": "ca0289ef-364a-4f46-cbfd-6a207e60ad7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
         }
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -880,32 +880,31 @@
     {
       "cell_type": "code",
       "source": [
-        "venta_por_categoria_tienda1=tienda.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "venta_por_categoria_tienda1=tienda.groupby('Categoría del Producto').size().sort_values(ascending=False).reset_index(name='Número de Ventas')\n",
         "print(venta_por_categoria_tienda1)"
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "1bf56f53-b4b5-4806-f665-108baf04aee6",
+        "outputId": "e5f2c28c-1ff0-4202-a363-abd5a3fc496d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Categoría del Producto\n",
-            "Artículos para el hogar     12698400.0\n",
-            "Deportes y diversión        39290000.0\n",
-            "Electrodomésticos          363685200.0\n",
-            "Electrónicos               429493500.0\n",
-            "Instrumentos musicales      91299000.0\n",
-            "Juguetes                    17995700.0\n",
-            "Libros                       8784900.0\n",
-            "Muebles                    187633700.0\n",
-            "Name: Precio, dtype: float64\n"
+            "    Categoría del Producto  Número de Ventas\n",
+            "0                  Muebles               465\n",
+            "1             Electrónicos               448\n",
+            "2                 Juguetes               324\n",
+            "3        Electrodomésticos               312\n",
+            "4     Deportes y diversión               284\n",
+            "5   Instrumentos musicales               182\n",
+            "6                   Libros               173\n",
+            "7  Artículos para el hogar               171\n"
           ]
         }
       ]
