Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1081,7 +1081,7 @@
         "\n",
         "\n",
         "---\n",
-        "Aqui se genera una grafica de puntos con una mejor visualización de la diferencia para poder darnos cuenta de cual es la más popular.\n",
+        "### Aqui se genera una grafica de puntos con una mejor visualización de la diferencia para poder darnos cuenta de cual es la más popular.\n",
         "\n",
         "\n",
         "---\n",
@@ -2206,12 +2206,12 @@
         "graficar_torta_envio(costos_lista)"
       ],
       "metadata": {
-        "id": "2YGHJnG5DV0t",
-        "outputId": "1af0d920-68be-460b-ae0c-06b3db4c9acf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "2YGHJnG5DV0t",
+        "outputId": "1af0d920-68be-460b-ae0c-06b3db4c9acf"
       },
       "execution_count": 111,
       "outputs": [
